--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,10 @@
 
 
 <li>"Love Will Tear Us Apart" </li>
-<li></li>
+<li>"Bela Lugosi's Dead" </li>
+<li>"A Forest" </li>
+<li> </li>
+<li> </li>
 "Bela Lugosi's Dead"
 "A Forest"
 "Nine While Nine"
